--- a/Frontend/chatbot/chatbot.html
+++ b/Frontend/chatbot/chatbot.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="/style.css">
 
 </head>
 
@@ -22,11 +23,11 @@
             </a>
 
             <nav class="nav">
-                <a href="/index.html" class="nav-link">Home</a>
+                <a href="index.html" class="nav-link active">Home</a>
                 <a href="#features" class="nav-link">Features</a>
-                <a href="#pricing" class="nav-link">Pricing</a>
-                <a href="blog.html" class="nav-link">Blog</a>
-                <a href="#about" class="nav-link">About</a>
+                <a href="https://www.somaiya.edu.in/en/events-and-updates/events/" class="nav-link">Events</a>
+                <a href="https://www.somaiya.edu.in/en/studentlife/" class="nav-link">Student Life</a>
+                <a href="https://www.somaiya.edu.in/en/about" class="nav-link">About</a>
             </nav>
 
             <a href="https://kjsit.somaiya.edu.in/en/contact-us" class="contact-button">Contact Us</a>
